--- a/bitsian.html
+++ b/bitsian.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 	<head>
-		<script
+		<!-- <script
 			src="//widget.manychat.com/144756672236680.js"
 			async="async"
-		></script>
+		></script> -->
 
 		<!--- basic page needs
     ================================================== -->
