--- a/coaches.html
+++ b/coaches.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <script src="//widget.manychat.com/144756672236680.js" async="async"></script>
+    <!-- <script src="//widget.manychat.com/144756672236680.js" async="async"></script> -->
 
 
     <!--- basic page needs
