--- a/test.html
+++ b/test.html
@@ -124,7 +124,7 @@ ga('send', 'pageview');
     <link rel="shortcut icon" href="./images/conquest-icon-orange.ico" type="image/x-icon">
     <link rel="icon" href="./images/conquest-icon-orange.ico" type="image/x-icon">
 
-    <script src="//widget.manychat.com/144756672236680.js" async="async"></script>
+    <!-- <script src="//widget.manychat.com/144756672236680.js" async="async"></script> -->
 
 </head>
 
