Updated Mentor images with webp

--- a/mentors.html
+++ b/mentors.html
@@ -224,7 +224,7 @@
 
                 <a href="https://www.linkedin.com/in/roopan-aulakh-174a9a5/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/1.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/1.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -242,7 +242,7 @@
 
                 <a href="https://www.linkedin.com/in/drvaibhavagrawal" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/2.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/2.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -260,7 +260,7 @@
 
                 <a href="https://www.linkedin.com/in/nketas/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/3.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/3.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -278,7 +278,7 @@
 
                 <a href="https://www.linkedin.com/in/venkatramanrm/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/4.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/4.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -310,7 +310,7 @@
 
                 <a href="https://www.linkedin.com/in/arjunnohwar/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/5.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/5.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -328,7 +328,7 @@
 
                 <a href="https://www.linkedin.com/in/naarayan-t-v-4b59621/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/6.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/6.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -346,7 +346,7 @@
 
                 <a href="https://www.linkedin.com/in/vishaljain2/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/7.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/7.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -364,7 +364,7 @@
 
                 <a href="https://www.linkedin.com/in/priyankamadnani/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/8.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/8.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -395,7 +395,7 @@
 
                 <a href="https://www.linkedin.com/in/prashantmehtawharton/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/9.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/9.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -413,7 +413,7 @@
 
                 <a href="https://www.linkedin.com/in/ritwikk/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/10.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/10.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -431,7 +431,7 @@
 
                 <a href="https://www.linkedin.com/in/vasutaagarwal/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/11.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/11.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -448,7 +448,7 @@
 
                 <a href="https://www.linkedin.com/in/mitesh-shah-0627873/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/12.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/12.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -874,7 +874,7 @@
 
                 <a href="https://www.linkedin.com/in/sathya-pramod-232ba51/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/13.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/13.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -892,7 +892,7 @@
 
                 <a href="https://www.linkedin.com/in/gmalhot/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/14.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/14.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -910,7 +910,7 @@
 
                 <a href="https://www.linkedin.com/in/swapna-gupta-322b714/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/15.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/15.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -928,7 +928,7 @@
 
                 <a href="https://www.linkedin.com/in/nagapr/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/16.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/16.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
@@ -960,7 +960,7 @@
 
                 <a href="https://www.linkedin.com/in/saptarshipr/" target="_blank">
                     <figure class="imghvr-slide-up">
-                        <img class="round" src="images/mentors/17.jpg" style="width: 1000px;">
+                        <img class="round" src="images/mentors/17.webp" style="width: 1000px;">
                         <figcaption>
                             <img src="./images/linkedin.png"
                                 style="width: 35% ; top: 50% ; left: 50%; position: absolute; transform: translate(-50% , -50%);">
