--- a/past_sponsors.html
+++ b/past_sponsors.html
@@ -115,7 +115,7 @@
                     
                     <li><a href="mentors.html">Mentors</a></li>
                     <li><a href="jury.html">Investors</a></li>
-                    <li><a href="alums.html">Alums</a></li>
+                    <li><a href="alums.html">Alumni</a></li>
                     <li><a href="success_stories.html">Success Stories</a></li>
                     <li><a href="current_partners.html">Our Partners</a></li>
                     <li class="current"><a href="#" style="color: #fc4f02">Past Partners</a></li>
@@ -172,7 +172,7 @@
         <a href="jury.html">Investors</a>
         <!-- <a href="#contact">Success Stories</a> -->
         <a href="current_partners.html" style="color: #fc4f02">Partners</a>
-        <a href="alums.html">Alums</a>
+        <a href="alums.html">Alumni</a>
         <a href="team.html">Team</a>
         <a href="./index.html#contact_us">Contact Us</a>
     </div>
