--- a/bitsian.html
+++ b/bitsian.html
@@ -112,7 +112,7 @@
 
 						<li><a href="mentors.html">Mentors</a></li>
 						<li class="current"><a href="jury.html">Investors</a></li>
-						<li><a href="alums.html">Alums</a></li>
+						<li><a href="alums.html">Alumni</a></li>
 						<!-- <li><a href="success_stories.html">Success Stories</a></li> -->
 						<li><a href="current_partners.html">Partners</a></li>
 						<!-- <li><a href="past_sponsors.html">Past Partners</a></li> -->
@@ -181,7 +181,7 @@
 			<a href="jury.html">Investors</a>
 			<!-- <a href="#contact">Success Stories</a> -->
 			<a href="current_partners.html">Partners</a>
-			<a href="alums.html">Alums</a>
+			<a href="alums.html">Alumni</a>
 			<a href="team.html">Team</a>
 			<a href="./index.html#contact_us">Contact Us</a>
 		</div>
