--- a/current_partners.html
+++ b/current_partners.html
@@ -120,7 +120,7 @@ appdi<!DOCTYPE html>
 
 						<li><a href="mentors.html">Mentors</a></li>
 						<li><a href="jury.html">Investors</a></li>
-						<li><a href="alums.html">Alums</a></li>
+						<li><a href="alums.html">Alumni</a></li>
 						<li class="current">
 							<a href="#" style="color: #fc4f02">Partners</a>
 						</li>
@@ -189,7 +189,7 @@ appdi<!DOCTYPE html>
 			<a href="jury.html">Investors</a>
 			<!-- <a href="#contact">Success Stories</a> -->
 			<a href="current_partners.html" style="color: #fc4f02">Partners</a>
-			<a href="alums.html">Alums</a>
+			<a href="alums.html">Alumni</a>
 			<a href="team.html">Team</a>
 			<a href="./index.html#contact_us">Contact Us</a>
 		</div>
