--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ ga('send', 'pageview');
                   
                     <li><a href="mentors.html">Mentors</a></li>
                     <li><a href="jury.html">Investors</a></li>
-                    <li><a href="alums.html">Alums</a></li>
+                    <li><a href="alums.html">Alumni</a></li>
                     <!-- <li><a href="success_stories.html">Success Stories</a></li> -->
                     <li><a href="current_partners.html">Partners</a></li>
                     <!-- <li><a href="past_sponsors.html">Past Partners</a></li> -->
@@ -273,7 +273,7 @@ ga('send', 'pageview');
         <a href="jury.html">Investors</a>
         <!-- <a href="#contact">Success Stories</a> -->
         <a href="current_partners.html">Partners</a>
-        <a href="alums.html" onCLick="ga('send', 'event', 'alums', 'alumsClicked');">Alums</a>
+        <a href="alums.html" onCLick="ga('send', 'event', 'alums', 'alumsClicked');">Alumni</a>
         <a href="team.html">Team</a>
         <a class="smoothscroll" id="customNavbar-contactUs" href="#contact_us">Contact Us</a>
     </div>
