--- a/jury.html
+++ b/jury.html
@@ -99,7 +99,7 @@
                     
                     <li><a href="mentors.html">Mentors</a></li>
                     <li class="current"><a href="#" style="color: #fc4f02">Investors</a></li>
-                    <li><a href="alums.html">Alums</a></li>
+                    <li><a href="alums.html">Alumni</a></li>
                     <!-- <li><a href="success_stories.html">Success Stories</a></li> -->
                     <li><a href="current_partners.html">Partners</a></li>
                     <!-- <li><a href="past_sponsors.html">Past Partners</a></li> -->
@@ -156,7 +156,7 @@
         <a href="jury.html" style="color: #fc4f02">Investors</a>
         <!-- <a href="#contact">Success Stories</a> -->
         <a href="current_partners.html">Partners</a>
-        <a href="alums.html">Alums</a>
+        <a href="alums.html">Alumni</a>
         <a href="team.html">Team</a>
         <a href="./index.html#contact_us">Contact Us</a>
     </div>
