--- a/success_stories.html
+++ b/success_stories.html
@@ -100,7 +100,7 @@
                    
                     <li><a href="mentors.html">Mentors</a></li>
                     <li><a href="jury.html">Investors</a></li>
-                    <li><a href="alums.html" style="color: #fc4f02">Alums</a></li>
+                    <li><a href="alums.html" style="color: #fc4f02">Alumni</a></li>
                     <!-- <li class="current"><a href="#" style="color: #fc4f02">Success Stories</a></li> -->
                     <li><a href="current_partners.html">Partners</a></li>
                     <!-- <li><a href="past_sponsors.html">Past Partners</a></li> -->
@@ -157,7 +157,7 @@
         <a href="jury.html">Investors</a>
         <!-- <a href="#contact">Success Stories</a> -->
         <a href="current_partners.html">Partners</a>
-        <a href="alums.html" style="color: #fc4f02">Alums</a>
+        <a href="alums.html" style="color: #fc4f02">Alumni</a>
         <a href="team.html">Team</a>
         <a href="./index.html#contact_us">Contact Us</a>
     </div>
