--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                 style="text-align: center; position: relative; left: 30%; margin-bottom: -5%; margin-top: 1.5%;">
         </div>
 
-        <div class='lead' data-aos="fade-up">Conquest works with both entrepreneurs and teams at the pre-seed stage:
-        </div>
+        <!-- <div class='lead' data-aos="fade-up">Conquest works with both entrepreneurs and teams at the pre-seed stage:
+        </div> -->
         <div class='who-we-help-points' data-aos="fade-up">
            <!-- <div class="who-we-help-point1">
                 <div class="point-logo1">
