--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ ga('send', 'pageview');
             <div class="row section-header" data-aos="fade-up">
                 <div class="col-full">
                     <h1 class="display-1"
-                        style="color: white ; text-align: center; margin-top: -5%; margin-bottom: 0%;">What We Do</h1>
+                        style="color: white ; text-align: center; margin-top: -5%; margin-bottom: 0%;">Our Work</h1>
                 </div>
             </div> <!-- end section-header -->
 
@@ -586,7 +586,7 @@ ga('send', 'pageview');
                 <div class="col-full">
                     <p class="lead"
                         style="text-align: center; color: white; margin-bottom: -1.1%; width: 85%; margin-left: 7.5%;">
-                        Conquest, an initiative by the Center for Entrepreneurial Leadership, BITS Pilani, is India’s First Student-Run Startup Accelerator. We help the best founders build great businesses and raise money. Our program includes online mentoring to the 15 most exciting startups from across the country over 6 weeks, connecting them with field experts. 
+                        Conquest, an initiative by the Center for Entrepreneurial Leadership, BITS Pilani, is India’s First Student-Run Startup Accelerator. We help the best founders build great businesses and raise funding. Our program includes providing online mentorship to the 15 most exciting startups from across the country over 6 weeks by connecting them with field experts. 
 Following this, the Top 10 startups undergo a 7 day Accelerator Program in Bangalore. The program ends with the Grand Finale where these startups pitch before India’s biggest investment firms and media houses.
                     </p>
                 </div>
@@ -600,7 +600,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
 
             <div class="row section-header" data-aos="fade-up">
                 <div class="col-full">
-                    <h1 class="display-1" style="color: white ; text-align: center;margin-top: -5% ">What We Do</h1>
+                    <h1 class="display-1" style="color: white ; text-align: center;margin-top: -5% ">Our Work</h1>
                 </div>
             </div> <!-- end section-header -->
 
@@ -612,7 +612,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
             <div class="row" data-aos="fade-up">
                 <div class="col-full">
                     <p class="lead" style="text-align: center; color: white; margin-bottom: -1.1%">
-                        Conquest, an initiative by the Center for Entrepreneurial Leadership, BITS Pilani, is India’s First Student-Run Startup Accelerator. We help the best founders build great businesses and raise money. Our program includes online mentoring to the 15 most exciting startups from across the country over 6 weeks, connecting them with field experts. 
+                        Conquest, an initiative by the Center for Entrepreneurial Leadership, BITS Pilani, is India’s First Student-Run Startup Accelerator. We help the best founders build great businesses and raise funding. Our program includes providing online mentorship to the 15 most exciting startups from across the country over 6 weeks by connecting them with field experts. 
 Following this, the Top 10 startups undergo a 7 day Accelerator Program in Bangalore. The program ends with the Grand Finale where these startups pitch before India’s biggest investment firms and media houses.
                     </p>
                 </div>
@@ -1121,10 +1121,9 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
 
             <div class="row" style="margin-bottom: 3% ; position: relative; text-align : center;">
                 <p class="lead" data-aos="fade-up" style="color: white">
-                    Registrations for Conquest open from 3rd April and go on till 10th May. Startups who are past
-                    the stage of building an MVP can register by filling in a simple application form. There is no
-                    registration fee. The shortlisting is based on parameters like idea, team, progress, understanding
-                    of market and competition.
+                    Registrations for Conquest are now open and will go on till 10th May. 
+                        Startups can register by filling a simple application form. There is no registration
+                        fee. The shortlisting is based on parameters like the idea, team, progress, understanding of the market and competition.
                 </p>
             </div>
         </div>
@@ -1620,7 +1619,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                     free accommodation and working space. Conquest creates a distraction free environment of co-learning
                     which helps startups grow together at exponential pace. The program comprises of mentorship sessions
                     with successful founders, investment workshops by VC’s and Angels, networking events and a wide
-                    array of activities to ensure that startups are ready for any challenge that confronts them.
+                    array of activities to ensure that startups are ready for any challenges that they may confront in the future.
                 </p>
             </div>
         </div>
@@ -1769,9 +1768,9 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                 <div style="width: 70%;float: right">
                     <h1 data-aos="fade-up" style="color: #fc4f02">Registrations</h1>
                     <p class="lead" data-aos="fade-up" style="color: white; font-size: 22px;">
-                        Registrations for Conquest are now open and go on till 10th May. 
+                        Registrations for Conquest are now open and will go on till 10th May. 
                         Startups can register by filling a simple application form. There is no registration
-                        fee. The shortlisting is based on parameters like idea, team, progress, understanding of market and competition.
+                        fee. The shortlisting is based on parameters like the idea, team, progress, understanding of the market and competition.
                     </p>
                 </div>
             </div>
@@ -2744,7 +2743,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                         accommodation and co-working space. We create an environment of co-learning that helps startups grow
                         together at an exponential pace. The program comprises sessions with successful founders, investment 
                         workshops by VC’s and Angels, networking events and a wide array of activities to ensure that startups
-                        are ready for any challenge that they confront.
+                        are ready for any challenges that they may confront in the future.
                     </p>
                 </div>
             </div>
