added Linkedin Tracking Functionality

--- a/current_partners.html
+++ b/current_partners.html
@@ -3606,6 +3606,7 @@ appdi<!DOCTYPE html>
 					document.getElementById('nextButtonID').style.marginTop = '4%';
 					invalidEntry.style.display = 'none';
 					closePopup = true;
+					linkedinclick();
 				}
 				index++;
 				// if(index == 2) {
@@ -3686,6 +3687,11 @@ appdi<!DOCTYPE html>
 				$('body').unbind('touchmove');
 				openRegister();
 			}
+			function linkedinclick(){
+				var img = document.createElement("img");
+				img.setAttribute("src", "https://px.ads.linkedin.com/collect/?pid=3453505&conversionId=4645633&fmt=gif");
+				document.body.appendChild(img);
+			}
 		</script>
 
 		<!-- Java Script
@@ -3702,5 +3708,19 @@ appdi<!DOCTYPE html>
 			src="//js.hs-scripts.com/7306927.js"
 		></script>
 		<!-- End of HubSpot Embed Code -->
+		<script type="text/javascript">
+_linkedin_partner_id = "3453505";
+window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script><script type="text/javascript">
+(function(){var s = document.getElementsByTagName("script")[0];
+var b = document.createElement("script");
+b.type = "text/javascript";b.async = true;
+b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+s.parentNode.insertBefore(b, s);})();
+</script>
+<noscript>
+<img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=3453505&fmt=gif" />
+</noscript>
 	</body>
 </html>
