--- a/index.html
+++ b/index.html
@@ -642,10 +642,10 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                     <div class="stats__count" style="color: #fc4f02">250</div>
                     <h5 style="color: white">Mentors</h5>
                 </div>
-                <!-- <div class="col-block stats__col">
-                    <div class="stats__count" style="color: #fc4f02">50</div>
+                <div class="col-block stats__col">
+                    <div class="stats__count" style="color: #fc4f02">5</div>
                     <h5 style="color: white">Lakh Prize Money</h5>
-                </div> -->
+                </div>
                 <div class="col-block stats__col">
                     <div class="stats__count" style="color: #fc4f02">50</div>
                     <h5 style="color: white">Investors</h5>
@@ -665,10 +665,10 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                     <div class="stats__count" style="color: #fc4f02">250</div>
                     <h5 style="color: white">Mentors</h5>
                 </div>
-                <!-- <div class="col-block stats__col">
-                    <div class="stats__count" style="color: #fc4f02">50</div>
+                <div class="col-block stats__col">
+                    <div class="stats__count" style="color: #fc4f02">5</div>
                     <h5 style="color: white">Lakh Prize Money</h5>
-                </div> -->
+                </div>
                 <div class="col-block stats__col">
                     <div class="stats__count" style="color: #fc4f02">50</div>
                     <h5 style="color: white">Investors</h5>
@@ -3104,7 +3104,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                         </div>
                         <div class="flip-card-back">
                             <h1>Cash Prize</h1>
-                            <p>Prize money upto 50 lacs up for grabs! </p>
+                            <p>Prize money upto 5 Lakhup for grabs! </p>
                             <a href="#section5" class="smoothscroll">Know More</a>
                         </div>
                     </div>
