--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
             <div class="row stats block-1-4 block-m-1-2 block-mob-full" style="
             width: 100%;
             position: relative;
-            left: 10%;" data-aos="fade-up">
+            " data-aos="fade-up">
 
                 <div class="col-block stats__col ">
                     <div class="stats__count" style="color: #fc4f02">3000</div>
@@ -3104,7 +3104,7 @@ Following this, the Top 10 startups undergo a 7 day Accelerator Program in Banga
                         </div>
                         <div class="flip-card-back">
                             <h1>Cash Prize</h1>
-                            <p>Prize money upto 5 Lakhup for grabs! </p>
+                            <p>Prize money upto 5 Lakh up for grabs! </p>
                             <a href="#section5" class="smoothscroll">Know More</a>
                         </div>
                     </div>
