--- a/current_partners.html
+++ b/current_partners.html
@@ -1482,7 +1482,7 @@ appdi<!DOCTYPE html>
 						<a href="https://economictimes.indiatimes.com/" target="_blank">
 							<img
 								class="round"
-								src="images/media_partner/TheEconomicTimes/image.png"
+								src="images/media_partner/TheEconomicTimes/Untitled design (1).png"
 								alt=""
 							/>
 						</a>
@@ -2322,6 +2322,70 @@ appdi<!DOCTYPE html>
 				>
 					<a>
 						<img class="round" src="images/current_partners/ai.png" alt="" />
+					</a>
+				</div>
+				<!-- end masonry__brick -->
+			</div>
+		</section>
+
+
+		<section
+			id="works"
+			class="s-works"
+			style="background: #ffffff; margin-bottom: -250px"
+		>
+			<div class="row section-header" data-aos="fade-up">
+				<div class="col-full">
+					<h1
+						class="display-1"
+						style="
+							text-align: center;
+							margin-top: -8%;
+							margin-bottom: -8%;
+							color: #111111;
+						"
+					>
+						Community Partners
+					</h1>
+				</div>
+			</div>
+			<!-- end section-header -->
+
+			<div>
+				<hr
+					class="style-two"
+					data-aos="fade-up"
+					style="
+						text: center;
+						position: relative;
+						left: 30%;
+						margin-bottom: -1%;
+					"
+				/>
+			</div>
+
+			<div
+				class="row masonry-wrap"
+				style="
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: center;
+					margin-top: 30px;
+					width: 100vw;
+				"
+			>
+				<div
+					class="masonry__brick"
+					data-aos="fade-up"
+					style="
+						padding: 0.8%;
+						background-color: #ffffff;
+						margin: 1%;
+						width: 260px;
+					"
+				>
+					<a href="https://discord.gg/kYUvty486F">
+						<img class="round" src="images/current_partners/TBC.png" alt="" />
 					</a>
 				</div>
 				<!-- end masonry__brick -->
