edit: fix partners issues

--- a/current_partners.html
+++ b/current_partners.html
@@ -1,4 +1,4 @@
-appdi<!DOCTYPE html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 	<head>
 		<!-- <script src="//widget.manychat.com/144756672236680.js" async="async"></script> -->
@@ -78,7 +78,9 @@ appdi<!DOCTYPE html>
 		/>
 	</head>
 
-	<body id="top" style="overflow-x: hidden">
+	<body id="top" style="overflow-x: hidden;">
+	<div style="width: 100vw; overflow: hidden;">
+	
 		<!-- preloader
     ================================================== -->
 		<div id="preloader">
@@ -99,7 +101,7 @@ appdi<!DOCTYPE html>
 					<img
 						src="./images/cover_photo.png"
 						alt="Homepage"
-						style="width: 37%"
+						style="width: 37%; height: auto;"
 					/>
 				</a>
 			</div>
@@ -3786,5 +3788,6 @@ s.parentNode.insertBefore(b, s);})();
 <noscript>
 <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=3453505&fmt=gif" />
 </noscript>
+</div>
 	</body>
 </html>
