--- a/alums-20.html
+++ b/alums-20.html
@@ -605,6 +605,88 @@
                 </div>
             </div>
         </div>
+
+        <div class="row success startup-element" style="margin-bottom: 3%; position: relative">
+            <div class="col-four tab-full multbg-top-to-bottom-left" data-aos="fade-up" style="
+						padding: 0.8%;
+						background-color: #111111;
+						margin-top: 1%;
+						width: 270px;
+					">
+
+                <img class="round" src="easy krishi.png" style="width: 250px; height: 250px" />
+            </div>
+
+            <div class="col-eight tab-full startup-element-heading" style="margin-top: -3%">
+                <h1 class="startup-name" data-aos="fade-up" style="color: #fc4f02">
+                    Easy Krishi
+                </h1>
+                <p class="lead startup-description-alums" data-aos="fade-up"
+                    style="font-size: 130%; color: white; font-size: 120%">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusantium exercitationem,
+                    reprehenderit, similique corrupti ut quos ratione provident sit repellendus cupiditate enim
+                    distinctio facere libero deleniti, ab vitae expedita quam?
+                </p>
+                <button onclick="location.href=''" type="button" class="lead" data-aos="fade-up"
+                    style="border: hidden; background-color: #fc4f02; color: white">
+                    Know More
+                </button>
+            </div>
+        </div>
+        <div class="row success startup-element" style="margin-bottom: 3%; position: relative">
+            <div id="onphone-swagene">
+                <div class="col-four tab-full multbg-top-to-bottom" data-aos="fade-up" style="
+							padding: 0.8%;
+							background-color: #111111;
+							margin: 1%;
+							width: 270px;
+						">
+                    <img class="round" src="venuemonk.jpg" />
+                </div>
+
+                <div class="col-eight tab-full startup-element-heading" style="margin-top: -3%">
+                    <h1 class="startup-name" data-aos="fade-up" style="color: #fc4f02">
+                        VenueMonk
+                    </h1>
+                    <p class="lead startup-description-alums" data-aos="fade-up"
+                        style="font-size: 130%; color: white; font-size: 120%">
+                        VenueMonk is a high tech venue booking platform which helps people
+                        book venues quickly, effortlessly and at the lowest possible
+                        price.
+                    </p>
+                    <button onclick="location.href='https://www.venuemonk.com'" type="button" class="lead"
+                        data-aos="fade-up" style="border: hidden; background-color: #fc4f02; color: white">
+                        Know More
+                    </button>
+                </div>
+            </div>
+            <div id="oncomputer-swagene">
+                <div class="col-eight tab-full startup-element-heading" style="margin-top: -3%">
+                    <h1 class="startup-name" data-aos="fade-up" style="color: #fc4f02">
+                        CommunityFarm
+                    </h1>
+                    <p class="lead startup-description-alums" data-aos="fade-up"
+                        style="font-size: 130%; color: white; font-size: 120%">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, doloremque ad saepe ex
+                        accusantium nam consequuntur facilis sint nulla aspernatur totam mollitia odio reiciendis vitae
+                        voluptatum ipsum, pariatur voluptas libero.
+                    </p>
+                    <button onclick="location.href='https://communityfarm.in/'" type="button" class="lead"
+                        data-aos="fade-up" style="border: hidden; background-color: #fc4f02; color: white">
+                        Know More
+                    </button>
+                </div>
+
+                <div class="col-four tab-full multbg-top-to-bottom" data-aos="fade-up" style="
+							padding: 0.8%;
+							background-color: #111111;
+							margin-top: 2%;
+							width: 270px;
+						">
+                    <img class="round" src="cfarm.png" />
+                </div>
+            </div>
+        </div>
     </section>
 
     <div>
